# pdf-sign

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  pdf-sign.rs  renovate.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/cli/src/: cli.rs  commands.rs  sign.rs  util.rs
crates/core/src/: digest.rs  pdf.rs
crates/gpg/src/: challenge.rs  keybox.rs
crates/gpg/tests/: challenge_response.rs
crates/sigstore/src/: sign.rs
crates/wasm/src/: lib.rs
nix/: checks.nix  git-hooks.nix  package.nix  shell.nix
scripts/: e2e.sh
src/: app.rs  cli.rs  json.rs  keybox.rs  lib.rs  main.rs  pdf.rs  sign.rs  util.rs  verify.rs
