[package]
name = "pdf-sign"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lib]
name = "pdf_sign"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
indicatif = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sequoia-gpg-agent = "0.6"
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
